[tool.poetry]
name = "agonegen.github.io"
version = "0.1.0"
description = ""
authors = ["agonegen <agonegen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pelican = "^4.6.0"
ipython = "^7.21.0"
matplotlib = "^3.3.4"
sklearn = "^0.0"
numpy = "^1.20.1"
ghp-import = "^1.1.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
